docs: add local build command